# easy-gpt

./: LICENSE  README.md  pyproject.toml
lazy-gpt/: gpt.py
lazygpt/: __init__.py  gpt.py  helpers.py
nicegpt/: nicegpt.py
src/: __init__.py  gpt.py
src/nicegpt/: __init__.py  nicegpt.py  text.py
