[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-gpt"
version = "0.0.1"
authors = [
  { name="Samuel Reeder", email="samuel.reeder@mail.utoronto.ca" },
]
description = "A simple package to make GPT API usage easier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SamuelReeder/easy-gpt"
"Bug Tracker" = "https://github.com/SamuelReeder/easy-gpt/issues"

[tool.setuptools.options]
packages = ["easygpt"]

[tool.setuptools.options.extras_require]
openai = ["openai"]